--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,37 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-arnold}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-12345}
       POSTGRES_DB: finance_tracker_api_production
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-arnold}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     ports:
       - "5432:5432"
 
   app:
     build: .
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "3001:3001"
     environment:
       RAILS_ENV: production
       DATABASE_URL: postgres://${POSTGRES_USER:-arnold}:${POSTGRES_PASSWORD:-12345}@db/finance_tracker_api_production
       RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
     volumes:
-      - .:/rails
       - gem_cache:/usr/local/bundle
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/up"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   postgres_data:
