--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,11 @@ services:
       - "5432:5432"
 
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        BUILDKIT_INLINE_CACHE: 1
     depends_on:
       db:
         condition: service_healthy
