prepare for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       retries: 5
     ports:
       - "5432:5432"
+    restart: unless-stopped
 
   app:
     build:
@@ -31,7 +32,8 @@ services:
     environment:
       RAILS_ENV: production
       DATABASE_URL: postgres://${POSTGRES_USER:-arnold}:${POSTGRES_PASSWORD:-12345}@db/finance_tracker_api_production
-      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+      RAILS_MASTER_KEY: 80145fd863afb43fe1468066ee11f67a
+      PORT: 3001
     deploy:
       resources:
         limits:
@@ -40,10 +42,16 @@ services:
     volumes:
       - gem_cache:/usr/local/bundle
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/up"]
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   postgres_data:
