--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,15 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-arnold}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-12345}
-      POSTGRES_DB: finance_tracker_api_production
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-arnold}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
     ports:
       - "5432:5432"
 
@@ -30,7 +31,7 @@ services:
       - "3001:3001"
     environment:
       RAILS_ENV: production
-      DATABASE_URL: postgres://${POSTGRES_USER:-arnold}:${POSTGRES_PASSWORD:-12345}@db/finance_tracker_api_production
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db/${POSTGRES_DB}
       RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
     deploy:
       resources:
@@ -39,12 +40,16 @@ services:
           memory: 512M
     volumes:
       - gem_cache:/usr/local/bundle
+      - ./log:/rails/log
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/up"]
       interval: 30s
       timeout: 10s
       retries: 3
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+    name: finance_tracker_postgres_data
   gem_cache:
+    name: finance_tracker_gem_cache
