set docker entry permissions, 5th success

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - gem_cache:/usr/local/bundle
       - ./log:/rails/log
     healthcheck:
-      test: ["CMD-SHELL", "ps aux | grep '[p]uma' || exit 1"]
+      test: ["CMD-SHELL", "ps aux | grep '[p]uma' && curl -f http://localhost:3001/up || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 3
